src/main/java/com/example/common/error/Exception400.java
package com.example.common.error;

public class Exception400 extends RuntimeException{
   public Exception400(String msg) {
        super(msg);
    }
}
